--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta property="og:description" content="A tool to find new POTA parks to activate"/>
     <link rel="canonical" href="https://newparks.ianrenton.com/"/>
     <meta property="og:url" content="https://newparks.ianrenton.com/"/>
-    <meta property="og:image" content="https://newparks.ianrenton.com/img/banner2.png"/>
-    <meta property="twitter:image" content="https://newparks.ianrenton.com/img/banner2.png"/>
+    <meta property="og:image" content="https://newparks.ianrenton.com/img/banner.png"/>
+    <meta property="twitter:image" content="https://newparks.ianrenton.com/img/banner.png"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="author" content="Ian Renton"/>
     <meta property="og:locale" content="en_GB"/>
