--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 <div id="controls">
     <h1 id="title">POTA New Park Finder</h1>
-    <p id="subtitle">By <a href="https://ianrenton.com" target="_blank">Ian Renton MØTRT</a> | <a href="https://github.com/ianrenton/pota-new-park-finder">Source Code</a></a></p>
+    <p id="subtitle">By <a href="https://ianrenton.com" target="_blank">Ian Renton MØTRT</a> | <a href="help.html" target="_blank">What is this?</a></p>
     <p><label id="myCallsignLabel" for="myCallsign" class="configLabel">Enter your callsign:&nbsp;
         <input type="text" id="myCallsign" class="textBox" name="myCallsign" placeholder="N0CALL"
                 oninput="this.value = this.value.toUpperCase()" style="width: 5em;"></label></p>
