--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <meta property="twitter:title" content="POTA New Park Finder"/>
     <meta name="description" content="A tool to find new POTA parks to activate"/>
     <meta property="og:description" content="A tool to find new POTA parks to activate"/>
-    <link rel="canonical" href="https://newparks.ianrenton.com/"/>
-    <meta property="og:url" content="https://newparks.ianrenton.com/"/>
-    <meta property="og:image" content="https://newparks.ianrenton.com/img/banner.png"/>
-    <meta property="twitter:image" content="https://newparks.ianrenton.com/img/banner.png"/>
+    <link rel="canonical" href="https://newparks.m0trt.radio/"/>
+    <meta property="og:url" content="https://newparks.m0trt.radio/"/>
+    <meta property="og:image" content="https://newparks.m0trt.radio/img/banner.png"/>
+    <meta property="twitter:image" content="https://newparks.m0trt.radio/img/banner.png"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="author" content="Ian Renton"/>
     <meta property="og:locale" content="en_GB"/>
